--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@ href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" ></script>
     
+<link rel="manifest" href="/manifest.json">
 </head>
     <script type="text/javascript">
     
@@ -39,7 +40,7 @@ href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min
         <a class="nav-link" href="device-description/device-description.html">PLUGGEDIN DEVICES</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="Report/Report.html">REPORT</a>
+        <a class="nav-link" href="Report/query.html">Query</a>
       </li>
         <li class="nav-item">
         <a class="nav-link" href="solution-videos/solution-videos.html">SOLUTION VIDEOS</a>
@@ -147,6 +148,6 @@ href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min
 </div>
 
 </section>
-
+<script src="/js/app.js"></script>
 </body>
 </html>
