--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <title>login Form</title>
      <link rel ="stylesheet" type= "text/css" href ="style.css">
+     <link rel="manifest" href="/manifest.json">
 </head>
 <body style ="background-image:url(img/mo2.jpg)">
 
@@ -20,8 +21,8 @@
 
         </form>
 
-
-  </div>
-</Body>
+    </div>
+    <script src="/js/app.js"></script>
+</body>
 
 </html>
