--- a/device-description/device-description.html
+++ b/device-description/device-description.html
@@ -5,6 +5,7 @@
 
 
      <link rel = " stylesheet" type= "text/css" href ="css/style.css" >
+      <link rel="manifest" href="/manifest.json">
 
   </head>
 
@@ -32,5 +33,6 @@
 			  </div>
 
     </div>
+    <script src="/js/app.js"></script>
 </body>
 </html>
