--- a/Report/query.html
+++ b/Report/query.html
@@ -24,11 +24,11 @@
  <div class="primeData">
   <div class="Form">
     <div class="Input">
-      <label for="nameInput">Name</label>
+      <label for="nameInput">Name&Model</label>
       <input type="text" name="name" id="nameInput" />
     </div>
     <div class="Input">
-      <label for="problemInput">Problem</label>
+      <label for="problemInput">ShareProblem</label>
       <input type="text" name="problem" id="problemInput" />
       
     </div>
