--- a/Report/query.html
+++ b/Report/query.html
@@ -85,6 +85,8 @@ for(var i = 0; i < sessionStorage.length; i++) {
 
 function deleteClicked(evt) {
   var name = evt.target.dataset.name;
+    sessionStorage.removeItem(name);
+    console.log(name);
 
   // Write code here
 }
