--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@ href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-          <a class="nav-link" href="home.html.html">HOME </a>
+          <a class="nav-link" href="home.html">HOME </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="device-description/device-description.html">PLUGGEDIN DEVICES</a>
