--- a/Audio-recorder/Audio-recorder.html
+++ b/Audio-recorder/Audio-recorder.html
@@ -7,7 +7,7 @@
 
      <link rel = " stylesheet" type= "text/css" href ="css/style.css" >
 
-
+<link rel="manifest" href="/manifest.json">
   </head>
   <body>
       <style>
@@ -102,7 +102,7 @@
 
 
 
-
+<script src="/js/app.js"></script>
 
 
       </body>
