--- a/Report/query.html
+++ b/Report/query.html
@@ -4,7 +4,7 @@
 	</title>
 
 
-     <link rel = " stylesheet" type= "text/css" href ="css/style.css" >
+     <link rel = " stylesheet" type= "text/css" href ="style.css" >
      <link rel="manifest" href="/manifest.json">
 
   </head>
