--- a/home.html
+++ b/home.html
@@ -149,6 +149,6 @@ href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min
 </div>
 
 </section>
-<script src="/js/app.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
