--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@ href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min
       </li>
       
       <li class="nav-item">
-        <a class="nav-link" href="Report/query.html">QUERY</a>
+        <a class="nav-link" href="query/query.html">QUERY</a>
       </li>
         <li class="nav-item">
         <a class="nav-link" href="solution-videos/solution-videos.html">SOLUTION VIDEOS</a>
