--- a/developer/developer.html
+++ b/developer/developer.html
@@ -28,11 +28,11 @@
     </div>
 
     <div class="title">
-      <h1>A B M Zafrul Huda, Co-Founder, Joint Chair and Head of Public Relations</h1>
+      <h1>A B M Zafrul Huda, Co-Founder Bruichie Australia</h1>
     </div>
 
     <div class="des">
-      <p>Zafrul has an amazing personality and a style to match it. He is a CDU graduate with exceptionally well proven track record within the media and public relations arena. He has had worked with various high profile Information technology projects with Big4 companies such as, Ernest Young and Delloite. Zafrul always aims to provide his fullest support in proving a positive image of the club to the greater audience.</p>
+      <p>Zafrul has an amazing personality and a style to match it. He is a CDU graduate with exceptionally well proven track record within IT arena. He has had worked with various high profile Information technology projects with Big4 companies such as, Ernest Young and Delloite. Zafrul always aims to provide his fullest support in proving a positive image of the club to the greater audience.</p>
     </div>
 
   </div>
